  This allows input of locale characters in DDD dialogs; error
  messages may also come up in your locale.  If you experience any
  problems, set LANG=C when invoking DDD.


Plotting
--------

- If you have several indexed variables in a cluster (such as X[1],
  X[3], and X[5]), DDD plots the cluster as 2-D plot, where the X-axis
  shows the index, and the Y-axis shows the values.


Data exploration
----------------

- Structs can now be rotated.  A horizontally displayed struct
  saves space by omitting the member names; this very much looks like
  a horizontal array.

- Array slices `ARRAY[FROM..TO]' are much better supported:
  * By default, the displayed values are clustered and displayed like an 
    ordinary array.
  * Array slices can be plotted, too.

- You can use the FROM..TO notation in arbitrary values, and also multiple
  times; `graph display 1..5 * 1..5' creates a multiplication table.


Running the Program
-------------------

- Breakpoint commands are also supported for DBX, Perl, and XDB.

- In Perl, DDD supports temporary breakpoints.


Settings
--------

- DDD saves the GDB source directory path with the current session.

- DDD saves the JDB class path only with the current session.

DDD 3.2 also incorporates all changes and bug fixes listed below.


DDD 3.1.7
=========

DDD 3.1.7 fixes a number of minor bugs.

- Auto-raised menus work much better (enabled by default).
- The `floating' command tool now correctly follows movements of the 
  main window under KDE and other window managers.
- The register window is updated when the current frame changes.
- Value tips of strings containing ` = ' are displayed correctly.
- In file names, `//' is no longer normalized to `/'.  This is useful 
  for special file systems, where '//c/foo' is an alias for `c:\foo`.
- Improved session management: `checkpoint sessions' not needed for shutdown
  (as initiated by GNOME) are automatically deleted after exiting DDD.